# sofastats_lib

./: 404.html  LICENSE  index.html  pyproject.toml
.github/workflows/: ci.yml  draft-pdf.yml
API/: index.html
data_prep/: index.html
docs/: paper.md
output_gallery/: index.html
paper/: index.html
search/: search_index.json
src/sofastats/conf/: main.py
src/sofastats/output/: interfaces.py
src/sofastats/output/js/: sofastats_dojo_minified.js
src/sofastats/output/tables/: cross_tab.py  freq.py
src/sofastats/output/tables/utils/: misc.py  multi_index_sort.py
src/sofastats/utils/: pandas.py
styles/: index.html
tests/: conf.py  test_stats_tests.py
utils/: minify_sofastats_dojo.py
