[project]
name = "sofastats_lib"
version = "1.0.1"
description = "SOFA (Statistics Open For All) the Python library"
authors = [
    { name = "Grant Paton-Simpson", email = "grant@sofastatistics.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "jinja2>=3.1.3",
    "matplotlib>=3.8.0,!=3.10.6",
    "mkdocs-include-markdown-plugin>=7.2.1",
    "numpy>=1.26.4",
    "pandas>=2.3,<3.0.0",
    "pyparsing>=3.0.8,<3.3.0",
    "ruamel-yaml>=0.18.10",
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = ["Development Status :: 1 - Planning"]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "deptry>=0.23.0",
    "faker>=37.5.3",
    "import-linter>=2.3",
    "mkdocs>=1.5.2",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=1.5.2",
    "mkdocs-material>=9.2.4",
    "pyproject-fmt>=2.6.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "pyarrow>=23.0.1",
]
test = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.build-backend]
include = [
    "sofastats/",
    "sofastats_examples/",
    ".gitignore",
    ".python-version",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]
exclude = [
    "uv.lock",
    "docs/*",
    "site/*",
    "store/*",
    "utils/*",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

link-mode = "symlink"
default-groups = ["test", "dev"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sofastats", "src/sofastats_examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-ra", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]
xfail_strict = true
log_cli_level = "INFO"
minversion = "7"
